--- a/Weatherbet/Gemfile
+++ b/Weatherbet/Gemfile
@@ -12,6 +12,7 @@ gem 'puma', '~> 3.0'
 gem 'sass-rails', '~> 5.0'
 #use bootstrap
 gem 'bootstrap-sass', '~> 3.2.0'
+gem 'autoprefixer-rails'
  
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
