--- a/Weatherbet/Gemfile
+++ b/Weatherbet/Gemfile
@@ -33,6 +33,9 @@ gem 'jbuilder', '~> 2.5'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
+# Use Rice for callling  C / C++ 
+gem 'rice', '~> 2.1'
+
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
