--- a/Weatherbet/test/fixtures/predictions.yml
+++ b/Weatherbet/test/fixtures/predictions.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  start: 2016-11-25 20:20:58
+  end: 2016-11-25 20:20:58
+  location: one
+
+two:
+  start: 2016-11-25 20:20:58
+  end: 2016-11-25 20:20:58
+  location: two
