--- a/Weatherbet/Gemfile
+++ b/Weatherbet/Gemfile
@@ -43,8 +43,8 @@ group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platform: :mri
   gem 'faker'
-  gem 'factory_girl_rails'
   gem 'better_errors'
+  gem 'binding_of_caller'
 end
 
 group :development do
